# vote

./: api.py  envs.py  fixDB.py  main.py  pyproject.toml  ws.py
templates/: 404.html  create.html  index.html  privateResult.html  results.html  vote.html
